ajout media ? liste ? t?l?charger + requete statistiques vues + nvl classe Telechargement_Media + modif BD pour Regarder + ... + script backup

--- a/WebContent/pages/erreur.xhtml
+++ b/WebContent/pages/erreur.xhtml
@@ -19,7 +19,7 @@
 			
 			<h:outputText value="Essayez d'effectuer une nouvelle recherche." />
 			<br/>
-			TODO David
+			TODO
 			<br/>
 			<br/>
 			
