DataTable - RowExpansion + fonctions pour gestion des commentaires + commentaires de l'ensemble du code (jsf et bean)

--- a/WebContent/pages/erreur.xhtml
+++ b/WebContent/pages/erreur.xhtml
@@ -23,7 +23,7 @@
 			<br/>
 			<br/>
 			
-			<h:outputLink value="http://localhost:8085/MediArea/pages/home.jsf" title="Revenir à la page d'accueil">
+			<h:outputLink value="/MediArea/pages/home.jsf" title="Revenir à la page d'accueil">
 				<h:outputText value="Revenir à la page d'accueil" />
 			</h:outputLink>
 			
