--- a/WebContent/pages/home.xhtml
+++ b/WebContent/pages/home.xhtml
@@ -5,7 +5,8 @@
       xmlns:a4j="http://richfaces.org/a4j"
       xmlns:rich="http://richfaces.org/rich"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"> 
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:p="http://primefaces.org/ui"> 
       
 <ui:composition template="/templates/standard.xhtml">
 	<ui:define name="pageTitle">Home</ui:define>
