--- a/WebContent/pages/recuperationMDP.xhtml
+++ b/WebContent/pages/recuperationMDP.xhtml
@@ -9,10 +9,10 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="/templates/standard.xhtml">
-	<ui:define name="pageTitle">Recupréation de Mot de Passe</ui:define>
+	<ui:define name="pageTitle">Récupération de Mot de Passe</ui:define>
 	<ui:define name="content">
 		<section class="group3">
-			<h3>Récupréation de Mot de Passe</h3>
+			<h3>Récupération de Mot de Passe</h3>
 			<h:form>
 				<p:growl id="growl" sticky="true" showDetail="true" />
 				<p:panel header="Informations connexion">
