include nvl page commentaires + avis (j'aime, je n'aime pas) fini + favori fini + ajout au panier ok + bon media dans beanPanier + ...

--- a/WebContent/pages/erreur.xhtml
+++ b/WebContent/pages/erreur.xhtml
@@ -17,9 +17,9 @@
 			<br/>
 			<br/>
 			
-			<h:outputText value="Essayez d'effectuer une nouvelle recherche." />
+			<!--<h:outputText value="Essayez d'effectuer une nouvelle recherche." />
+			XXX-->
 			<br/>
-			TODO
 			<br/>
 			<br/>
 			
