Commit finale Ben

--- a/WebContent/pages/decouvrir.xhtml
+++ b/WebContent/pages/decouvrir.xhtml
@@ -38,7 +38,7 @@
 		<aside class="group2">
 			<h3>Inscription</h3>
 			<br/>
-			<p>Pour profiter de tout cela inscriver-vous dès maintenant.</p>
+			<p>Pour profiter de tout cela inscrivez-vous dès maintenant.</p>
 			<br/>
 			<p:button outcome="inscription" value="Créer mon compte" icon="ui-icon-person" />  
 		</aside>
