--- a/WebContent/pages/detailMediaCommentaires.xhtml
+++ b/WebContent/pages/detailMediaCommentaires.xhtml
@@ -49,7 +49,7 @@
 						paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 						rowsPerPageTemplate="5,10,15">
 
-						<f:facet name="header">  
+				<f:facet name="header">
 		             Commentaires
 		        </f:facet>
 
@@ -63,7 +63,7 @@
 
 
 						<p:column style="width:60px">
-							<f:facet name="header">  
+							<f:facet name="header">
 		                    Infos 
 		            </f:facet>
 							<div align="center">
@@ -91,7 +91,7 @@
 
 							<hr />
 							<!--<h:panelGroup rendered="#{commentaire.auteur == beanMedia.utilisateurConnecte}">-->
-							<p:commandButton id="suppressionCommentaire"
+							<p:commandButton id="suppressionCommentaire" process="@this"
 								action="#{beanMediaCommentaire.supprimerCommentaire}"
 								icon="ui-icon-trash" title="Supprimer"
 								update=":messages :tabViewCommentaires">
@@ -101,7 +101,7 @@
 									value="#{commentaire}" />
 							</p:commandButton>
 							<!--</h:panelGroup> TODO-->
-							<p:commandButton id="repondreCommentaire"
+							<p:commandButton id="repondreCommentaire" process="@this"
 								icon="ui-icon-mail-closed" title="Répondre"
 								oncomplete="dlgReponseCommentaire.show()">
 								<f:setPropertyActionListener
@@ -110,7 +110,7 @@
 							</p:commandButton>
 							<h:panelGroup
 								rendered="#{commentaire.auteur != beanMedia.utilisateurConnecte}">
-								<p:commandButton id="signalerCommentaire"
+								<p:commandButton id="signalerCommentaire" process="@this"
 									icon="ui-icon-alert" title="Signaler"
 									oncomplete="dlgSignalementCommentaire.show()">
 									<f:setPropertyActionListener
@@ -133,9 +133,7 @@
 
 
 				<!-- Affichage des réponses associées à chaque commentaire affiché -->
-				<p:rowExpansion>				
-		            test
-		  
+				<p:rowExpansion>
 				<!--<h:form id="formRepeatReponses">-->
 						<ui:repeat value="#{beanMediaCommentaire.mapValue(commentaire)}"
 							var="reponse" id="repeatReponses" rows="10">
