--- a/WebContent/pages/panier.xhtml
+++ b/WebContent/pages/panier.xhtml
@@ -44,11 +44,16 @@
 		        <p:column>  
 		            <article class="holder_gallery_min">
 						<h:form>
-							<h:commandLink styleClass="photo_hover2" action="#{beanRecherche.accessMedia(media.idMedia)}"><h:graphicImage library="images" name="#{media.photo.cheminPhotoCouverture}"  width="150" height="99" alt="#{media.photo.nomPhotoCouverture}"/> <br /></h:commandLink>
+							<h:commandLink styleClass="photo_hover2" action="#{beanRecherche.accessMedia(media.idMedia)}"><h:graphicImage value="/resources/images/#{media.photo.nomPhotoCouverture}"  width="150" height="99" alt="#{media.photo.nomPhotoCouverture}"/> <br /></h:commandLink>
 							<div class="clearfloat"></div>
-							<h2 class="titre_liste_media"><h:commandLink value="#{media.titreMedia}" action="#{beanRecherche.accessMedia(media.idMedia)}" /> </h2> 
+							<h2 class="titre_liste_media">
+								<h:graphicImage library="images" name="/icones/ico_audio.png" alt="Audio" rendered="#{media.type.nomTypeMedia == 'son'}" />
+								<h:graphicImage library="images" name="/icones/ico_video.png" alt="Video" rendered="#{media.type.nomTypeMedia == 'video'}"/>
+								<h:commandLink value="#{media.titreMedia}" action="#{beanRecherche.accessMedia(media.idMedia)}" /> 
+							</h2> 
+							<!-- <p class="vues_liste_media">1.000.000 vues</p> -->
 							<p class="infos_liste_media">
-							Par <h:commandLink value="#{media.auteurMedia.pseudo}" action="#{beanRecherche.clickOnPublisher(media.auteurMedia.pseudo)}" />, le <h:outputText value="#{media.datePublication}"><f:convertDateTime type="date" dateStyle="short" /></h:outputText> <br />
+							Par <h:commandLink value="#{media.auteurMedia.pseudo}" action="#{beanRecherche.clickOnPublisher(media.auteurMedia.pseudo)}" />, le <h:outputText value="#{media.datePublication}"><f:convertDateTime type="date" dateStyle="short" /></h:outputText> <br />		
 							<h:commandLink value="Supprimer de la liste" action="#{beanPanier.supprimer(media)}" />
 							</p>
 						</h:form>
